@@ -91,7 +91,13 @@ extern PlayMode esd_play_mode;
 #endif /* AU_ESD */
 
 #ifdef AU_PORTAUDIO
+#ifndef AU_PORTAUDIO_DLL
 extern PlayMode portaudio_play_mode;
+#else
+extern PlayMode portaudio_asio_play_mode;
+extern PlayMode portaudio_win_ds_play_mode;
+extern PlayMode portaudio_win_wmme_play_mode;
+#endif
 #endif /* AU_PORTAUDIO */
 
 #ifdef AU_JACK
@@ -148,7 +154,13 @@ PlayMode *play_mode_list[] = {
 #endif /* AU_ESD */
 
 #if defined(AU_PORTAUDIO)
+#ifndef AU_PORTAUDIO_DLL
   &portaudio_play_mode,
+#else
+  &portaudio_asio_play_mode,
+  &portaudio_win_ds_play_mode,
+  &portaudio_win_wmme_play_mode,
+#endif
 #endif /* AU_PORTAUDIO */
 
 #if defined(AU_JACK)
